refactor: add logic to handle getting course info
