# src/validations/createcourse.ts
@@ -9,10 +9,8 @@ export const createCourseSchema = z.object({
       message:
         "المُعرّف يجب أن يحتوي فقط على حروف إنجليزية صغيرة، أرقام، وشرطات (-)",
     }),
-  selectedTrack: z
-    .string()
-    .trim()
-    .min(1, { message: "يجب اختيار مسار" }),
+  trackId: z.string().trim().min(1, { message: "يجب اختيار تراك" }),
+  pathId: z.string().trim().min(1, { message: "يجب اختيار مسار" }),
 });
 
 export type ICreateCourseForm = z.infer<typeof createCourseSchema>;
